--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "apollo-server-express": "^2.15.0"
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-server-express": "^2.15.0",
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.8.0"
   }
 }
